module03/css/style.css
*{
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Open Sans', sans-serif;
  background: #f9f9f9;
}

.wrapper {
  width: 968px;
  background-color: white;
  box-shadow: 0 0 3px grey;
  margin: 0 auto;
  padding: 40px 46px;
}

.logo {
  width: 145px;
  height: 40px;
  margin-top: 10px;
  margin-bottom: 40px;
}

header {
  background: linear-gradient(to top, #444343, #5e5e5e);
  width: 968px;
  height: 40px;
  margin-bottom: 40px;
  font-size: 11pt;
}

.menu {
  padding-left: 2px;
}

.menu li {
  display: inline-block;
}

.menu a {
  color: white;
  display: inline-block;
  text-decoration: none;
  padding: 9px 23px 11px 23px;
  margin-right: 36px;
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
}

.menu a:hover {
  background: linear-gradient(to top, #2e2e2e, #4a4a4a);
  border-left: 1px solid #838383;
  border-right: 1px solid #838383;
}


.menu a.active {
  background: linear-gradient(to top, #2e2e2e, #4a4a4a);
  border-left: 1px solid #838383;
  border-right: 1px solid #838383;
}

aside {
  float: left;
}

.navigation {
  width: 239px;
  list-style-type: none;
  border: 1px solid #c8c8c8;
}

.navigation li {
  border-bottom: 1px solid #c8c8c8;
  padding: 9px 24px 11px 24px;
}

.navigation a {
  text-decoration: none;
  font-size: 10pt;
  color: #656363;
}
.navigation a:hover {
  margin-left: 24px;
  color: #2c2c2c;
}

.navigation a.active {
  margin-left: 24px;
  color: #2c2c2c;
}
.content {
  float: right;
  width: 676px;
  padding-bottom: 40px;
}
.content p {
  padding-left: 24px;
  padding-top: 40px;
  font-size: 10pt;
  color: #2c2c2c;
}

.bike {
  width: 674px;
  height: 400px;
  border: 1px solid #c8c8c8;
  display: block;
  align-items: center;
  /*background-image: url(../img/bike.jpg);
  background-position: center center;
  background-repeat: no-repeat;*/
}

footer {
  background: linear-gradient(to top, #444343, #5e5e5e);
  background-color: #e1e1e1;
  background-blend-mode: overlay;
  width: 966px;
  height: 40px;
  font-size: 10pt;
  clear: both;
}

.botmenu li {
  display: inline-block;
  }

.botmenu a {
  color: #2c2c2c;
  display: inline-block;
  text-decoration: none;
  padding: 9px 24px 11px 24px;
  margin-right: 36px;
}

.botmenu a:hover {
  text-decoration: underline;
}

.botmenu a.active {
  text-decoration: underline;
}

.botmenu li:last-child {
  float:right;
}

.botmenu li:last-child::after {
  display: block;
  content: "2014 &copy All rights reserved" ;
  padding-right: 24px;
  padding-top: 9px;
}

